--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": " ",
+  "name": "csc8425-webproject",
   "version": "0.0.1",
   "description": "",
-  "keywords": "",
-  "license": "",
+  "keywords": [],
+  "license": "ISC",
   "author": "",
   "scripts": {
     "build": "parcel build index.html",
@@ -12,11 +12,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.3.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "sqlite3": "^5.0.2"
-  }
+    "express": "^4.18.1",
+    "sqlite3": "^5.0.10"
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NewcastleRSE/CSC8425-webproject.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NewcastleRSE/CSC8425-webproject/issues"
+  },
+  "homepage": "https://github.com/NewcastleRSE/CSC8425-webproject#readme"
 }
