--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,17 @@ dist
 robots.txt
 .htaccess
 .doc
+video/hms-pinafore-the-simpsons.mp4
+img/shows/utopia-ltd.jpg
+img/shows/the-sorcerer.jpg
+img/shows/pirates-of-penzance.jpg
+img/shows/iolanthe.jpg
+img/shows/aphrodite-curse.jpg
+img/nugss-logo.png
+img/index/trial-by-jury.jpg
+img/index/the-sorcerer-cast-photo.jpg
+img/shows/cox-box-zoo.jpg
+img/index/carousel-two.jpg
+img/index/carousel-three.jpg
+img/index/carousel-one.jpg
+img/background-photo.jpg
